--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,7 +7,9 @@ environment:
   sdk: '>=2.12.0-0 <3.0.0'
 
 dependencies:
- path: ^1.7.0
+  path: ^1.8.0
+  sprintf: ^6.0.0-nullsafety
+  # 格式化日期库 intl: ^0.17.0
 
 dev_dependencies:
   pedantic: ^1.9.0
