--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ description: A starting point for Dart libraries or applications.
 # homepage: https://www.example.com
 
 environment:
-  sdk: '>=2.13.0-0 <3.0.0'
+  sdk: '>=2.17.0-0 <3.0.0'
 
 dependencies:
   path: ^1.8.0
@@ -12,5 +12,5 @@ dependencies:
   # 格式化日期库 intl: ^0.17.0
 
 dev_dependencies:
-  pedantic: ^1.9.0
+  lint: ^1.8.2
   test: ^1.14.4
